[tool.poetry]
name = "pypoetry bug"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.pyright.dependencies]
pyright = "^1.1.287"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = []

pytest_alembic_exclude = "test_model_definitions_match_ddl"
